syntax = "proto3";

package com.microservices.orderservice;

option java_multiple_files = true;
option java_package = "com.microservices.orderservice.grpc";
option java_outer_classname = "OrderServiceProto";

// Order Status Enum
enum OrderStatus {
  PENDING = 0;
  PROCESSING = 1;
  PAID = 2;
  CANCELLED = 3;
  COMPLETED = 4;
}

// Order Message
message Order {
  int64 id = 1;
  string customer_id = 2;
  string amount = 3;  // Using string for BigDecimal precision
  OrderStatus status = 4;
  string description = 5;
  int64 created_at = 6;  // Unix timestamp
  int64 updated_at = 7;  // Unix timestamp
}

// Get Order Request
message GetOrderRequest {
  int64 order_id = 1;
  string token = 2;  // SSO token for authentication
}

// Get Order Response
message GetOrderResponse {
  Order order = 1;
  bool success = 2;
  string error_message = 3;
}

// Update Order Status Request
message UpdateOrderStatusRequest {
  int64 order_id = 1;
  OrderStatus status = 2;
  string token = 3;  // SSO token for authentication
}

// Update Order Status Response
message UpdateOrderStatusResponse {
  Order order = 1;
  bool success = 2;
  string error_message = 3;
}

// Order Service Definition
service OrderService {
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
}

